@@ -41,4 +41,12 @@ class ParameterTest extends \PHPUnit_Framework_TestCase {
         $this->assertEquals('NAME="va:lue"',$param->serialize());
 
     }
+
+    function testSerializeSemiColon() {
+
+        $param = new Parameter('name','va;lue');
+        $this->assertEquals('NAME="va;lue"',$param->serialize());
+
+    }
+
 }
